查询条件重构一部分、问题很多